// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`createHttpRoomContext should return an http room context with expected shape 1`] = `
[
  "members",
]
`;

exports[`createRoomContext should return a room context object with expected shape 1`] = `
[
  "join",
  "leave",
  "members",
]
`;
